--- a/.babelrc
+++ b/.babelrc
@@ -21,6 +21,10 @@
           "@": "./src",
           "@assets": "./src/assets",
           "@components": "./src/components",
+          "@contexts": "./src/contexts",
+          "@hooks": "./src/hooks",
+          "@pages": "./src/pages",
+          "@routes": "./src/components",
           "@stories": "./src/stories",
           "@styles": "./src/styles",
           "@utils": "./src/utils"
