--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.8",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
