--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     ]
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-select": "^1.2.2",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "5.3.0",
+    "react-hook-form": "^7.51.3",
+    "react-router-dom": "^6.23.0",
     "styled-components": "^5.3.8",
-    "vite-plugin-svgr": "^3.2.0"
+    "vite-plugin-svgr": "^3.2.0",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
